# dns-cache-poisoning-2024

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  tabs.ps1
lib/logkit/: pyproject.toml
lib/logkit/logkit/: __init__.py  logtool.py
service/attacker/: Dockerfile  attacker.py
service/forwarder/: Dockerfile  dnsmasq.conf
service/sniffer/: Dockerfile  sniffer.py
